--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <header><title>This is title</title></header>
 <body>
-Hello world
+<meta http-equiv="refresh" content="0;https://vk.com/doipu/">
 </body>
 </html>
