--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<header><title>This is title</title></header>
+<header><title>DOIPU.RU</title></header>
 <body>
 <meta http-equiv="refresh" content="0;https://vk.com/doipu/">
 </body>
