--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <header><title>DOIPU.RU</title></header>
 <body>
-<meta http-equiv="refresh" content="0;https://vk.com/doipu">
+<meta http-equiv="refresh" content="0;https://music.yandex.ru/artist/3966363">
 </body>
 </html>
